--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <!-- Default Settings-->
         <meta charset="utf-8">
         <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
-        <title>Template</title>
+        <title>Quote Generator</title>
 
         <!-- This is the stylesheet. --> 
         <link rel="stylesheet" href="style.css">
@@ -22,11 +22,41 @@
 
     <body>
 
+        <div class="quote-container id="quote-container">
+
+
+            <!-- Quote element-->
+            <div class="quote-text">
+                <i class="fas fa-quote-left"></i>
+                <span id="quote">
+                    "Everyone wants happiness, nobody wants pain, but you can't have a rainbow without a little rain."
+                </span>
+            </div>
+
+
+            <!-- Author -->
+            <div class="quote-author">
+                <span id="author">Unknown</span>
+            </div>
+
+
+            <!-- Buttons-->
+            <div class="button-container">
+                <!-- Twitter and New Quote Buttons-->
+                <button class="twitter-button" id="twitter" title="Tweet this!">
+                    <i class="fab fa-twitter"></i>
+                    <button id="newquote">New Quote</button>
+                </button>
+            </div>
+        </div>
+
 
         <!--Script-->
         <script src="script.js">
             
         </script>
+
+
     </body>
 
 </html>
