Added Twitter button, new quote button, and loading function.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <body>
 
-        <div class="quote-container id="quote-container">
+        <div class="quote-container" id="quote-container">
 
 
             <!-- Quote element-->
@@ -45,11 +45,13 @@
                 <!-- Twitter and New Quote Buttons-->
                 <button class="twitter-button" id="twitter" title="Tweet this!">
                     <i class="fab fa-twitter"></i>
-                    <button id="newquote">New Quote</button>
+                    <button id="new-quote">New Quote</button>
                 </button>
             </div>
         </div>
 
+        <!-- Loader -->
+        <div class="loader" id="loader"></div>
 
         <!--Script-->
         <script src="script.js">
